se modifico producctos

--- a/html/productos.html
+++ b/html/productos.html
@@ -41,7 +41,8 @@
 
     </aside>
     <section class="container">
-        <div class="productos">
+        <!-- foreach  -->
+        <div class="productos" name="productos">
             <h3>Lentes</h3>
             <br/>
             <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
