--- a/html/gestion-usuario.html
+++ b/html/gestion-usuario.html
@@ -11,7 +11,7 @@
     <header>
         <div class="enlaces">
             <a href="#">Mi perfil</a>
-            <a href="#">Salir</a>
+            <a href="index.html">Salir</a>
         </div>
 
         <h1 class = "titulo">Panel de Administración</h1>
@@ -20,7 +20,6 @@
 
     <div class="contenedor">
         <div class="gestiones">
-            <h2><a href="gestion-empleado.html">Gestionar Empleados</a></h2>
             <h2 class="usuario"><a href="gestion-usuario.html">Gestionar Usuarios</a></h2>
             <h2><a href="gestion-producto.html">Gestionar Productos</a></h2>
         </div>
