--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -18,11 +18,10 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="inicio.html">Inicio</a></li>
                     <li><a href="productos.html">Producto</a></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="login.html">Ingresar</a></li>
-                    <li><a href="registro.html">Registrarse</a></li>
+                    <li><a href="login.html">Salir</a></li>
                 </ul>
             </nav>
         </div>
