--- a/html/productos.html
+++ b/html/productos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link rel="stylesheet" href="../css/Productos.css">
-    <script src="../js/carrito.js"></script>
+    <!-- <script src="../js/carrito.js"></script> -->
 
 </head>
 <body>
@@ -30,125 +30,121 @@
         </div>
     </header>
 
-    <nav class="categorias">
-        <h3>Categorias</h3>      
-        <label for="menu-bar" class="icon-menu"><input type="checkbox"> Lentes de medida</label>
-        <label for="menu-bar" class="icon-menu"><input type="checkbox"> Lentes de Sol</label> 
-        <label for="menu-bar" class="icon-menu"><input type="checkbox"> Lentes de Contacto</label>
-        <label for="menu-bar" class="icon-menu"><input type="checkbox"> Accesorios</label>
-    </nav>
-    <aside>
-
-    </aside>
-    <section class="container">
-        <!-- foreach  -->
-        <div class="productos" name="productos">
-            <h3>Lentes</h3>
-            <br/>
-            <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
-            <div class="descripcion">
-                <p>S/ 70.00</p>
-                <button type="submit" class="pagar">añadir</button>
+        <nav class="categorias">
+            <h3>Categorias</h3>      
+            <label for="menu-bar" class="icon-menu"><input type="checkbox"> Lentes de medida</label>
+            <label for="menu-bar" class="icon-menu"><input type="checkbox"> Lentes de Sol</label> 
+            <label for="menu-bar" class="icon-menu"><input type="checkbox"> Lentes de Contacto</label>
+            <label for="menu-bar" class="icon-menu"><input type="checkbox"> Accesorios</label>
+        </nav>
+        <section class="container">
+            <!-- foreach  -->
+            <div class="productos" name="productos">
+                <h3>Lentes</h3>
+                <br/>
+                <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
+                <div class="descripcion">
+                    <p>S/ 70.00</p>
+                    <button type="submit" class="pagar">añadir</button>
+                </div>
             </div>
-        </div>
-        <div class="productos">
-            <h3>Lentes</h3>
-            <br/>
-            <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
-            <div class="descripcion">
-                <p>S/ 70.00</p>
-                <a href="login.html"><button type="submit">añadir</button></a>
+            <div class="productos">
+                <h3>Lentes</h3>
+                <br/>
+                <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
+                <div class="descripcion">
+                    <p>S/ 70.00</p>
+                    <a href="login.html"><button type="submit">añadir</button></a>
+                </div>
             </div>
-        </div>
-        <div class="productos">
-            <h3>Lentes</h3>
-            <br/>
-            <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
-            <div class="descripcion">
-                <p>S/ 70.00</p>
-                <a href="login.html"><button type="submit">añadir</button></a>
+            <div class="productos">
+                <h3>Lentes</h3>
+                <br/>
+                <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
+                <div class="descripcion">
+                    <p>S/ 70.00</p>
+                    <a href="login.html"><button type="submit">añadir</button></a>
+                </div>
             </div>
-        </div>
-        <div class="productos">
-            <h3>Lentes</h3>
-            <br/>
-            <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
-            <div class="descripcion">
-                <p>S/ 70.00</p>
-                <a href="login.html"><button type="submit">añadir</button></a>
+            <div class="productos">
+                <h3>Lentes</h3>
+                <br/>
+                <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
+                <div class="descripcion">
+                    <p>S/ 70.00</p>
+                    <a href="login.html"><button type="submit">añadir</button></a>
+                </div>
             </div>
-        </div>
-        <div class="productos">
-            <h3>Lentes</h3>
-            <br/>
-            <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
-            <div class="descripcion">
-                <p>S/ 70.00</p>
-                <a href="login.html"><button type="submit">añadir</button></a>
+            <div class="productos">
+                <h3>Lentes</h3>
+                <br/>
+                <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
+                <div class="descripcion">
+                    <p>S/ 70.00</p>
+                    <a href="login.html"><button type="submit">añadir</button></a>
+                </div>
             </div>
-        </div>
-        <div class="productos">
-            <h3>Lentes</h3>
-            <br/>
-            <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
-            <div class="descripcion">
-                <p>S/ 70.00</p>
-                <a href="login.html"><button type="submit">añadir</button></a>
+            <div class="productos">
+                <h3>Lentes</h3>
+                <br/>
+                <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
+                <div class="descripcion">
+                    <p>S/ 70.00</p>
+                    <a href="login.html"><button type="submit">añadir</button></a>
+                </div>
             </div>
-        </div>
-        <div class="productos">
-            <h3>Lentes</h3>
-            <br/>
-            <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
-            <div class="descripcion">
-                <p>S/ 70.00</p>
-                <a href="login.html"><button type="submit">añadir</button></a>
+            <div class="productos">
+                <h3>Lentes</h3>
+                <br/>
+                <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
+                <div class="descripcion">
+                    <p>S/ 70.00</p>
+                    <a href="login.html"><button type="submit">añadir</button></a>
+                </div>
             </div>
-        </div>
-        <div class="productos">
-            <h3>Lentes</h3>
-            <br/>
-            <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
-            <div class="descripcion">
-                <p>S/ 70.00</p>
-                <a href="login.html"><button type="submit">añadir</button></a>
+            <div class="productos">
+                <h3>Lentes</h3>
+                <br/>
+                <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
+                <div class="descripcion">
+                    <p>S/ 70.00</p>
+                    <a href="login.html"><button type="submit">añadir</button></a>
+                </div>
             </div>
-        </div>
-        <div class="productos">
-            <h3>Lentes</h3>
-            <br/>
-            <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
-            <div class="descripcion">
-                <p>S/ 70.00</p>
-                <a href="login.html"><button type="submit">añadir</button></a>
+            <div class="productos">
+                <h3>Lentes</h3>
+                <br/>
+                <img src="../img/lentes hombres de negro.jpg" alt="Image" width="250" height="200">
+                <div class="descripcion">
+                    <p>S/ 70.00</p>
+                    <a href="login.html"><button type="submit">añadir</button></a>
+                </div>
             </div>
-        </div>
-
     </section>
 
-    <script>
-        // Definimos la función pagarprueba
-        function pagarprueba() {
-            var botonPagar = document.querySelector('.pagar');
-
-            // Agregamos un evento de click al botón
-            botonPagar.addEventListener('click', function() {
-                alert('Gracias por su compra');
-            });
-        }
-
-        // Llamamos a la función para que se ejecute
-        pagarprueba();
-    </script>
-    <!-- <script>
-        // Seleccionamos el botón de pagar
-        var botonPagar = document.querySelector('.pagar');
-
-        // Agregamos un evento de click al botón
-        botonPagar.addEventListener('click', function() {
-            alert('Gracias por su compra');
-        });
-    </script> -->
+    <div class="two columns u-pull-right">
+        <ul>
+            <li class="submenu">
+                    <img src="img/cart.png" id="img-carrito">
+                    <div id="carrito">              
+                            <table id="lista-carrito" class="u-full-width">
+                                <thead>
+                                    <tr>
+                                        <th>Imagen</th>
+                                        <th>Nombre</th>
+                                        <th>Precio</th>
+                                        <th>Cantidad</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                            <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                    </div>
+            </li>
+        </ul>
+    </div>
+    
 
 </body>
 </html>
