se termino el bienvenido 2

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -21,7 +21,7 @@
             </nav>
         </div>
         <div class="header-content container">
-            <h1 style="text-align: center;">ECONOLENTES</h1> 
+            <h1 style="text-align: center;">BIENVENIDO A ECONOLENTES!</h1> 
             <h2>Hola, <span id="nombreUsuario"></span>!</h2>
         </div>      
     </header>
